[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "pyberny"
version = "0.0.0"
description = "Molecular/crystal structure optimizer"
readme = "README.md"
authors = ["Jan Hermann <dev@jan.hermann.name>"]
repository = "https://github.com/jhrmnn/pyberny"
documentation = "https://jhrmnn.github.io/pyberny"
license = "MPL-2.0"
packages = [
    { include = "berny", from = "src" },
]
include = [
    { path = "src/berny/py.typed", format = ["sdist", "wheel"] },
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.21,<3"
pytest = { version = ">=6", optional = true }
coverage = { version = ">=6", optional = true }
sphinx = { version = ">=5,<8", optional = true }
sphinxcontrib-katex = { version = ">=0.9", optional = true }
sphinx-multiversion = { version = ">=0.2", optional = true }
toml = { version = ">=0.10", optional = true }
pyscf = { version = ">=2.5", optional = true }
matplotlib = { version = ">=3.5", optional = true }
tblite = { version = ">=0.3", optional = true }
# Point-group detection + symmetry-adapted displacement coordinates for the
# `symmetry` argument of Berny. Tracked on a fork branch with qcelemental made
# optional so the dependency stays numpy-only; swap for a PyPI version spec once
# MolSym publishes the change.
molsym = { git = "https://github.com/jhrmnn/molsym.git", branch = "claude/qcelemental-optional-iosjwj", optional = true }

[tool.poetry.extras]
test = ["pytest", "coverage"]
doc = ["sphinx", "sphinxcontrib-katex", "sphinx-multiversion", "toml"]
benchmark = ["pyscf", "tblite"]
plot = ["matplotlib"]
symmetry = ["molsym"]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.6"
black = ">=22"
mypy = ">=1"

[tool.poetry.scripts]
berny = "berny.cli:main"

[tool.poetry-dynamic-versioning]
enable = true
dirty = true
pattern = '^(?P<base>\d+\.\d+\.\d+)$'

[tool.black]
target-version = ["py310"]
skip-string-normalization = true

[tool.mypy]
python_version = "3.10"
files = ["src/berny"]
strict = true
warn_unreachable = true
extra_checks = true
disallow_any_unimported = true
enable_error_code = [
    "redundant-self",
    "redundant-expr",
    "possibly-undefined",
    "truthy-bool",
    "truthy-iterable",
    "ignore-without-code",
    "unused-awaitable",
]

# tblite ships no type stubs; XTBSolver imports it lazily and uses it only at
# runtime, so let mypy treat the module as untyped.
[[tool.mypy.overrides]]
module = "tblite.*"
ignore_missing_imports = true

# molsym ships no type stubs; symmetry.py imports it lazily and uses it only at
# runtime, so let mypy treat the module as untyped.
[[tool.mypy.overrides]]
module = "molsym.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::PendingDeprecationWarning"]
testpaths = ["tests"]

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C90",
    "N",
    "B",
    "C4",
    "I",
    "UP",
    "SIM",
    "PIE",
    "RET",
    "PT",
    "RUF",
    "NPY",
    "ANN",
]
ignore = [
    "E501",  # line length handled by black
    "E741",  # ambiguous variable name
    "E203",  # whitespace before punctuation (black-compatible)
    "N802",  # function name should be lowercase
    "N803",  # argument name should be lowercase
    "N806",  # variable in function should be lowercase
    "N999",  # invalid module name (Math.py is intentional)
    "B905",  # zip() without explicit strict=
    "RUF001",  # ambiguous unicode in strings (intentional math typography)
    "RUF002",  # ambiguous unicode in docstrings (intentional math typography)
    "RUF003",  # ambiguous unicode in comments (intentional math typography)
    "SIM108",  # use ternary; hurts readability in numeric branches
    "PT018",  # composite assertions are often clearer as one line
    "ANN401",  # Any in annotations (kept consistent with mypy not disallowing Any)
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "typing",
    "third-party",
    "first-party",
    "local-folder",
]
no-lines-before = ["typing"]
combine-as-imports = true

[tool.ruff.lint.isort.sections]
typing = ["typing", "typing_extensions"]

[tool.ruff.lint.per-file-ignores]
# ANN (flake8-annotations) is only enforced on the importable library;
# tests, scripts, and the docs config aren't subject to mypy --strict and
# are kept annotation-light.
"tests/**" = ["ANN"]
"scripts/**" = ["ANN"]
"doc/**" = ["ANN"]

[tool.coverage.run]
branch = true
source = ["berny"]
