[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "pyberny"
version = "0.0.0"
description = "Molecular/crystal structure optimizer"
readme = "README.md"
authors = ["Jan Hermann <dev@jan.hermann.name>"]
repository = "https://github.com/jhrmnn/pyberny"
documentation = "https://jhrmnn.github.io/pyberny"
license = "MPL-2.0"
packages = [
    { include = "berny", from = "src" },
]
include = [
    { path = "src/berny/py.typed", format = ["sdist", "wheel"] },
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.21,<3"
pytest = { version = ">=6", optional = true }
coverage = { version = ">=6", optional = true }
sphinx = { version = ">=5,<8", optional = true }
sphinxcontrib-katex = { version = ">=0.9", optional = true }
sphinx-multiversion = { version = ">=0.2", optional = true }
toml = { version = ">=0.10", optional = true }
pyscf = { version = ">=2.5", optional = true }
matplotlib = { version = ">=3.5", optional = true }
tblite = { version = ">=0.3", optional = true }
# Point-group detection + symmetry-adapted displacement coordinates for the
# `symmetry` argument of Berny. Optional (exposed via the `symmetry` extra) and
# imported lazily by berny.symmetry, so a plain `pip install` still succeeds --
# and `import berny` still works -- in environments that can't reach this git
# URL. That matters for sandboxed cloud sessions whose scoped git credential
# only covers pyberny: cloning a second repo there 403s, which as a hard
# dependency aborted the whole install. Without molsym, point-group detection
# degrades to no-op C1 handling. Tracked on a fork branch with qcelemental made
# optional so the dependency stays numpy-only. NB: this git URL still blocks a
# clean PyPI upload of pyberny; swap it for a version spec once MolSym is on PyPI.
molsym = { git = "https://github.com/jhrmnn/molsym.git", branch = "claude/qcelemental-optional-iosjwj", optional = true }

[tool.poetry.extras]
test = ["pytest", "coverage"]
doc = ["sphinx", "sphinxcontrib-katex", "sphinx-multiversion", "toml"]
benchmark = ["pyscf", "tblite"]
plot = ["matplotlib"]
symmetry = ["molsym"]

[tool.poetry.group.dev.dependencies]
# Pinned because the ruff lint config enables preview rules, whose set changes
# between releases; an unpinned ruff would flag/clear rules inconsistently
# across machines. Keep in sync with .github/workflows/lint.yaml.
ruff = "==0.15.18"
black = ">=22"
mypy = ">=1"

[tool.poetry.scripts]
berny = "berny.cli:main"

[tool.poetry-dynamic-versioning]
enable = true
dirty = true
pattern = '^(?P<base>\d+\.\d+\.\d+)$'

[tool.black]
target-version = ["py310"]
skip-string-normalization = true

[tool.mypy]
# `python_version` is intentionally unset so mypy targets whichever
# interpreter runs it (the lint CI job, currently 3.12). Pinning it to our
# floor (3.10) instead would desync the target from the installed NumPy:
# NumPy >=2.5 is 3.12-only and ships PEP 695 `type` stubs that mypy can only
# parse when targeting >=3.12, so a 3.10 target on a 3.12 runner fails.
files = ["src/berny"]
strict = true
warn_unreachable = true
extra_checks = true
# Treat bytes/bytearray/memoryview as distinct (the mypy 2.0 default, opted
# into early).
strict_bytes = true
disallow_any_unimported = true
# Flag implicit Any leaking in through untyped decorators.
disallow_any_decorated = true
enable_error_code = [
    "redundant-self",
    "redundant-expr",
    "possibly-undefined",
    "truthy-bool",
    "truthy-iterable",
    "ignore-without-code",
    "unused-awaitable",
    # Error on use of @deprecated-marked symbols (PEP 702).
    "deprecated",
    # Require match statements over enums/literals/unions to be exhaustive.
    "exhaustive-match",
    # Flag reveal_type/reveal_locals left in without an explicit import.
    "unimported-reveal",
]

# tblite ships no type stubs; XTBSolver imports it lazily and uses it only at
# runtime, so let mypy treat the module as untyped.
[[tool.mypy.overrides]]
module = "tblite.*"
ignore_missing_imports = true

# molsym ships no type stubs, so let mypy treat the module as untyped.
[[tool.mypy.overrides]]
module = "molsym.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
# Turn warnings into errors (Python's -W error) so CI fails on new warnings.
filterwarnings = ["error"]
testpaths = ["tests"]

[tool.ruff]
line-length = 80
target-version = "py310"
# Opt into preview rules; the unstable rules that don't suit numerical code are
# turned off individually in `ignore` below.
preview = true

[tool.ruff.lint]
# Broad, curated allowlist: we enable nearly every rule family that makes sense
# for a typed, numpy-based numerical library and disable individual rules that
# clash with numerical idioms or the black formatter (see `ignore`). A few
# families are deliberately *not* selected:
#   * D / DOC  - would require docstringing the whole codebase, a separate effort
#   * Q, COM   - quote/comma style is owned by black (skip-string-normalization)
#   * EM, TRY003 (below) - force a verbose exception-message style we don't want
#   * FBT      - flagging bool arguments would mean API (keyword-only) churn
#   * S        - bandit adds little to a pure numerical optimizer and flags every
#                `assert`, which we use liberally in the algorithm and tests
#   * ARG      - the polymorphic coordinate classes and solver callbacks share
#                signatures, so "unused" args are interface/API symmetry
#   * CPY      - copyright headers are present but not in CPY's expected format
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "C90",   # mccabe complexity
    "N",     # pep8-naming
    "I",     # isort
    "UP",    # pyupgrade
    "YTT",   # flake8-2020
    "ANN",   # flake8-annotations
    "A",     # flake8-builtins
    "BLE",   # flake8-blind-except
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "FA",    # flake8-future-annotations
    "ICN",   # flake8-import-conventions
    "LOG",   # flake8-logging
    "G",     # flake8-logging-format
    "INP",   # flake8-no-pep420
    "PIE",   # flake8-pie
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLOT",  # flake8-slots
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TC",    # flake8-type-checking
    "PTH",   # flake8-use-pathlib
    "T10",   # flake8-debugger
    "ISC",   # flake8-implicit-str-concat
    "FLY",   # flynt
    "ERA",   # eradicate (commented-out code)
    "PGH",   # pygrep-hooks
    "PL",    # pylint
    "TRY",   # tryceratops
    "FURB",  # refurb
    "PERF",  # perflint
    "RUF",   # ruff-specific
    "NPY",   # numpy-specific
]
ignore = [
    "E501",  # line length handled by black
    "E741",  # ambiguous variable name (l, etc. are standard math notation)
    "E203",  # whitespace before punctuation (black-compatible)
    "N802",  # function name should be lowercase
    "N803",  # argument name should be lowercase
    "N806",  # variable in function should be lowercase
    "N999",  # invalid module name (Math.py is intentional)
    "B905",  # zip() without explicit strict=
    "RUF001",  # ambiguous unicode in strings (intentional math typography)
    "RUF002",  # ambiguous unicode in docstrings (intentional math typography)
    "RUF003",  # ambiguous unicode in comments (intentional math typography)
    "SIM108",  # use ternary; hurts readability in numeric branches
    "PT018",  # composite assertions are often clearer as one line
    "ANN401",  # Any in annotations (kept consistent with mypy not disallowing Any)
    "ISC001",  # single-line implicit string concat (conflicts with black)
    "PLR2004",  # magic-value-comparison: numeric thresholds/literals are pervasive
    "PLR6104",  # non-augmented-assignment: `x = x + y` must stay out-of-place for
                # numpy arrays (in-place `+=` mutates shared/aliased buffers)
    "PLR0911",  # too-many-return-statements
    "PLR0912",  # too-many-branches
    "PLR0913",  # too-many-arguments
    "PLR0914",  # too-many-locals
    "PLR0915",  # too-many-statements
    "PLR0916",  # too-many-boolean-expressions
    "PLR0917",  # too-many-positional-arguments
    "PLR1702",  # too-many-nested-blocks
                # ^ structural size limits; numerical kernels are naturally large
                #   and overall complexity is already bounded by C90 (mccabe)
    "PLR6301",  # no-self-use: methods are kept on classes for interface symmetry
    "PLC0415",  # import-outside-top-level: optional deps (tblite, matplotlib,
                # pyscf) are imported lazily on purpose
    "TRY003",  # raise-vanilla-args: long inline exception messages are fine here
    "PTH123",  # builtin-open: plain open() is clear and idiomatic
    "RUF067",  # non-empty-init-module: the benchmarks package legitimately holds
               # data-loading logic in its __init__, not just re-exports
    "RUF069",  # float-equality-comparison: exact comparisons against 0/sentinels
               # are intentional in the numerical kernels
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "typing",
    "third-party",
    "first-party",
    "local-folder",
]
no-lines-before = ["typing"]
combine-as-imports = true

[tool.ruff.lint.isort.sections]
typing = ["typing", "typing_extensions"]

[tool.ruff.lint.per-file-ignores]
# ANN (flake8-annotations) is only enforced on the importable library;
# tests, scripts, and the docs config aren't subject to mypy --strict and
# are kept annotation-light.
"tests/**" = [
    "ANN",
    "PLC2701",  # tests import private (_-prefixed) helpers to exercise them
    "PLW2901",  # reusing a loop variable is harmless in test bodies
]
"scripts/**" = [
    "ANN",
    "BLE001",  # batch runners catch Exception so one bad case can't abort the run
    "PLW0603",  # module-level globals are fine in small one-off CLI scripts
]
"doc/**" = [
    "ANN",
    "INP001",  # the Sphinx config dir is intentionally not a package
    "A001",  # `copyright` is a Sphinx-mandated config variable name
]

[tool.coverage.run]
branch = true
source = ["berny"]
